--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,16 +2,27 @@ version: '2'
 services:
   virtuoso:
     image: tenforce/virtuoso:1.0.0-virtuoso7.2.2
-    ports: 
-     - "1111:1111"
-     - "8890:8890"
+    expose: 
+     - "1111"
+     - "8890"
     volumes:
      - ./data:/data
     environment:
      - DBA_PASSWORD=myDbaPassword
      - SPARQL_UPDATE=true
      - DEFAULT_GRAPH=http://www.example.com/my-graph
+  
   redis:
     image: redis:3.2
+    expose:
+     - "6379"
+
+  weaver:
+    image: sysunite/weaver-server:0.1.2
     ports:
-     - "6379:6379"
+     - "9487:9487"
+    depends_on:
+      - virtuoso
+      - redis
+
+     
