Changes redis to persistent storage

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
      - "1111:1111"
      - "8890:8890"
     volumes:
-     - ./data:/data
+     - ./virtuoso-data:/data
     environment:
      - DBA_PASSWORD=myDbaPassword
      - SPARQL_UPDATE=true
@@ -17,6 +17,9 @@ services:
   
   redis:
     image: redis:3.2
+    volumes:
+     - ./redis-data:/data
+    command: redis-server --appendonly yes
     expose:
      - "6379"
     ports:
