--- a/weaver-server-virtuoso/Dockerfile
+++ b/weaver-server-virtuoso/Dockerfile
@@ -17,4 +17,4 @@ COPY code /usr/src/app
 
 EXPOSE 9487
 
-CMD echo 'Waiting for virtuoso on ' ${VIRTUOSO_HOST} ':' ${VIRTUOSO_PORT} && while ! nc -w 1 -z ${VIRTUOSO_HOST} ${VIRTUOSO_PORT}; do sleep 0.1; done && npm start
+CMD echo 'Waiting for redis ' && while ! nc -w 1 -z ${REDIS_HOST} ${REDIS_PORT}; do sleep 0.1; done && echo 'Waiting for virtuoso on ' ${VIRTUOSO_HOST} ':' ${VIRTUOSO_PORT} && while ! nc -w 1 -z ${VIRTUOSO_HOST} ${VIRTUOSO_PORT}; do sleep 0.1; done && npm start
