--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,9 @@ services:
   
   redis:
     image: redis:3.2
+    user: "1000:50"
+    volumes:
+     - ./redis-data:/data
     command: redis-server --appendonly yes
     expose:
      - "6379"
