--- a/weaver-workbench-data/Dockerfile
+++ b/weaver-workbench-data/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:0.10
+FROM node:4.4
 
 # Docker nodejs creation following 
 # https://nodejs.org/en/docs/guides/nodejs-docker-webapp/
@@ -10,7 +10,7 @@ RUN mkdir -p /usr/src/app
 WORKDIR /usr/src/app
 
 COPY code /usr/src/app
-RUN npm install
+RUN npm install --quiet
 RUN bower --allow-root install
 
 EXPOSE 9010
