Updates weaver-server-virtuoso to node 0.12

--- a/weaver-server-virtuoso/Dockerfile
+++ b/weaver-server-virtuoso/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:0.10
+FROM node:0.12
 
 # Docker nodejs creation following 
 # https://nodejs.org/en/docs/guides/nodejs-docker-webapp/
@@ -9,9 +9,9 @@ RUN mkdir -p /usr/src/app
 WORKDIR /usr/src/app
 
 COPY code/package.json /usr/src/app
-RUN npm install
+RUN npm install --quiet
 
-RUN npm install -g coffee-script
+RUN npm install --quiet -g coffee-script
 
 COPY code /usr/src/app
 RUN coffee -o lib -c src 
