--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,7 +27,7 @@ services:
      - "6379:6379"
 
   weaver:
-    image: sysunite/weaver-server-virtuoso:0.0.10
+    image: sysunite/weaver-server-virtuoso:0.1.1
     ports:
      - "9487:9487"
     depends_on:
@@ -37,7 +37,8 @@ services:
       - virtuoso
       - redis
     environment:
-      - REDIS_URL=redis:6379
+      - PORT=9487
+      - WIPE_ENABLED=true
       - REDIS_HOST=redis
       - REDIS_PORT=6379
       - VIRTUOSO_HOST=virtuoso
@@ -46,7 +47,7 @@ services:
       - VIRTUOSO_PASSWORD=myDbaPassword
 
   workbench:
-    image: sysunite/weaver-workbench-data:0.1.5
+    image: sysunite/weaver-workbench-data:0.1.6
     ports:
      - "9010:9010"
     depends_on:
