--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,7 @@ services:
      - "6379"
     ports:
      - "6379:6379"
+    command: redis-server --appendonly yes
 
   weaver:
     image: sysunite/weaver-server-virtuoso:0.1.12
