--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,16 +41,16 @@ services:
      - VIRTUOSO_CHECK_PORT=8890
      - VIRTUOSO_PASSWORD=myDbaPassword
 
-  workbench:
-    image: sysunite/weaver-workbench-data:0.1.17
-    ports:
-     - "9010:9010"
-    depends_on:
-     - weaver
-    links:
-     - weaver
-    environment:
-     - WEAVER_ADDRESS=http://192.168.99.100:9487/
-     - WEAVER_HOST=weaver
-     - WEAVER_PORT=9487
+  # workbench:
+  #   image: sysunite/weaver-workbench-data:0.1.17
+  #   ports:
+  #    - "9010:9010"
+  #   depends_on:
+  #    - weaver
+  #   links:
+  #    - weaver
+  #   environment:
+  #    - WEAVER_ADDRESS=http://192.168.99.100:9487/
+  #    - WEAVER_HOST=weaver
+  #    - WEAVER_PORT=9487
 
