Using the neo4j beta image

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,45 +1,30 @@
 version: '2'
-services:
-  virtuoso:
-    image: tenforce/virtuoso:1.0.0-virtuoso7.2.2
-    expose: 
-     - "1111"
-     - "8890"
-    ports:
-     - "1111:1111"
-     - "8890:8890"
-    environment:
-     - DBA_PASSWORD=myDbaPassword
-     - SPARQL_UPDATE=true
-     - DEFAULT_GRAPH=http://www.example.com/my-graph
 
-  redis:
-    image: redis:3.2
-    expose:
-     - "6379"
-    ports:
-     - "6379:6379"
-    command: redis-server --appendonly yes
+# Images for the UOB project: weaver-server-neo4j(embedded neo4j), IFC_generator, frontendStructure -> ifc-webviewer, redis and jetty(replaces IFC-generator image for now).
+services:
 
   weaver:
-    image: sysunite/weaver-server-virtuoso:0.2.5
+    image: sysunite/weaver-server-neo4j:beta
+    volumes:
+      - ./data:/usr/app/db
     ports:
-     - "9487:9487"
+      - "9487:9487"
     depends_on:
-      - virtuoso
       - redis
     links:
-      - virtuoso
       - redis
     environment:
       - PORT=9487
       - WIPE_ENABLED=true
       - REDIS_HOST=redis
-      - REDIS_PORT=6379
-      - VIRTUOSO_HOST=virtuoso
-      - VIRTUOSO_PORT=1111
-      - VIRTUOSO_CHECK_PORT=8890
-      - VIRTUOSO_PASSWORD=myDbaPassword
+      - REDIS_PORT=6379 
+
+  redis:
+    image: redis:3.2 # 3.2 is still the latest
+    expose:
+     - "6379" # Allow communication from weaver-server-neo4j image
+    ports:
+     - "6379:6379"
 
   workbench:
     image: sysunite/weaver-workbench-data:0.1.17
@@ -52,5 +37,4 @@ services:
     environment:
      - WEAVER_ADDRESS=http://192.168.99.100:9487/
      - WEAVER_HOST=weaver
-     - WEAVER_PORT=9487
-
+     - WEAVER_PORT=9487 
