--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,7 @@ services:
      - "6379"
     ports:
      - "6379:6379"
+    command: redis-server --appendonly yes
 
   workbench:
     image: sysunite/weaver-workbench-data:0.1.17
